--- a/src/presentacion/MainFrm.form
+++ b/src/presentacion/MainFrm.form
@@ -459,10 +459,10 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="firstPanelTab6" min="-2" pref="218" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
+                              <Component id="firstPanelTab6" min="-2" pref="218" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -487,7 +487,7 @@
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                           <Image iconType="3" name="/img/Circulo.gif"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="Adicional"/>
+                        <Property name="text" type="java.lang.String" value="Actualizar Parametro"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -540,7 +540,7 @@
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="fecha1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace pref="293" max="32767" attributes="0"/>
+                                  <EmptySpace pref="295" max="32767" attributes="0"/>
                                   <Component id="txtUserAdmin" min="-2" pref="204" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                               </Group>
