--- a/src/presentacion/Menu.form
+++ b/src/presentacion/Menu.form
@@ -34,6 +34,9 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="home_pnl">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder justification="2" title="Main Menu">
