--- a/src/presentacion/FrmBancaPorInternet.form
+++ b/src/presentacion/FrmBancaPorInternet.form
@@ -37,6 +37,9 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JDesktopPane" name="dspFondo">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="10"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -105,10 +108,7 @@
                           <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="lblRecargar" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="75" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="lblRecargar" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="57" max="32767" attributes="0"/>
               </Group>
